--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
 spring.jpa.hibernate.ddl-auto=none
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
+
+spring.security.user.name=username
+spring.security.user.password=password
